--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div class="container">
-  <app-speech-text></app-speech-text>
+<div id="bg" [ngClass]="bgEffect">
+</div>
+<canvas id="canvasOverlay" [ngClass]="canvasEffect" class = "canvas"></canvas>
+<div id="slide" class="container">
   <app-slides></app-slides>
+  <app-speech-text></app-speech-text>
 </div>
