--- a/src/app/slides/slide/template/2.html
+++ b/src/app/slides/slide/template/2.html
@@ -1,1 +1,10 @@
-２ページ目
+<header>
+    <h1>２枚目のスライド</h1>
+  </header>
+  <p>源氏物語のスライド</p>
+  <ul>
+    <li>正編前紀: 桐壺から朝顔</li>
+    <li>正編中紀: 少女から藤裏</li>
+    <li>正編後紀: 若菜から竹河</li>
+  </ul>
+  
